added first card in home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,15 @@
-<p>
-  home works!
+<div>
+  <mat-card>
+      <mat-card-title>title</mat-card-title>
+      <mat-card-content>
+        Macy is een hond. Noet en Ivar zijn cavia's. Macy's favoriete eten is vlees. Noets favoriete eten is Noet-mix. Dat is ook Ivars favoriete eten.
+      </mat-card-content>
+      <!-- <mat-card-image>
+          <img src="assets/cavia1.jpg">
+      </mat-card-image> -->
+      <img mat-card-image src="assets/cavia1.jpg"> 
+  </mat-card>
+</div>
 
 
 
-
-  home still works
-</p>
