added margin to cards, improved card layout

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,20 +7,28 @@ div {
 .homepage-grid {
     display: flex;
     flex-direction: column;
-    align-items: baseline;
-    max-width: 900px;
+    align-items: stretch;
+    max-width: 1000px;
+    margin: 40px;
 }
 
 .homepage-grid-row {
     display: flex;
     justify-content: center;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    max-height: 300px;
 }
 
 
 
 mat-card {
-    background-color: lightgray;
-    max-width: 300px;
-    max-height: 250px;
-    border: 30 30 30 30px white;
+    background-color: whitesmoke;
+    max-width: 250px;
+    margin: 8px;
+    border: 15px rgb(140, 171, 201);
+}
+
+.mat-card-image-home {
+    max-heigth: 140px;
 }
