--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,35 +3,23 @@
         <div class="homepage-grid-row">
             <mat-card>
                 <mat-card-title>{{paintingsNavCard.title}}</mat-card-title>
-                <mat-card-content>
-                  {{paintingsNavCard.content}}
-                </mat-card-content>
                 <img mat-card-image src="assets/cavia1.jpg"> 
             </mat-card>
       
             <mat-card>
                 <mat-card-title>{{universeNavCard.title}}</mat-card-title>
-                <mat-card-content>
-                  {{universeNavCard.content}}
-                </mat-card-content>
-                <img mat-card-image src="assets/cavia1.jpg"> 
+                <img mat-card-image class="mat-card-image-home" src="assets/cavia1.jpg"> 
             </mat-card>
           </div>
       
           <div class="homepage-grid-row">
               <mat-card>
                   <mat-card-title>Antioxidanten</mat-card-title>
-                  <mat-card-content>
-                    {{paintingsNavCard.content}}
-                  </mat-card-content>
                   <img mat-card-image src="assets/cavia1.jpg"> 
               </mat-card>
         
               <mat-card>
                   <mat-card-title>Formule 1</mat-card-title>
-                  <mat-card-content>
-                    {{universeNavCard.content}}
-                  </mat-card-content>
                   <img mat-card-image src="assets/cavia1.jpg"> 
               </mat-card>
           </div>
