--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,25 +3,13 @@
         <div class="homepage-grid-row">
             <mat-card>
                 <mat-card-title>{{paintingsNavCard.title}}</mat-card-title>
-                <img mat-card-image src="assets/cavia1.jpg"> 
+                <img mat-card-image src="assets/bluepainting.png"> 
             </mat-card>
       
             <mat-card>
                 <mat-card-title>{{universeNavCard.title}}</mat-card-title>
-                <img mat-card-image class="mat-card-image-home" src="assets/cavia1.jpg"> 
+                <img mat-card-image class="mat-card-image-home" src="assets/bluepainting.png"> 
             </mat-card>
-          </div>
-      
-          <div class="homepage-grid-row">
-              <mat-card>
-                  <mat-card-title>Antioxidanten</mat-card-title>
-                  <img mat-card-image src="assets/cavia1.jpg"> 
-              </mat-card>
-        
-              <mat-card>
-                  <mat-card-title>Formule 1</mat-card-title>
-                  <img mat-card-image src="assets/cavia1.jpg"> 
-              </mat-card>
           </div>
       </div>
 </div>
