added pages, added navigation to pages from home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,10 +8,16 @@
       
             <mat-card>
                 <mat-card-title>{{universeNavCard.title}}</mat-card-title>
+                
                 <img mat-card-image class="mat-card-image-home" src="assets/bluepainting.png"> 
             </mat-card>
           </div>
       </div>
+</div>
+<div>
+    <button (click)="onPaintingsClick()">
+        test routing
+    </button>
 </div>
 
 
