--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 <mat-toolbar>
-  <span>Application</span>
+  <span>
+    <button mat-button (click)="onHomeClick()">
+        <mat-icon>home</mat-icon>
+    </button>
+  </span>
+  <span>
+    <p>
+        Bob Hoogenboom
+    </p>
+  </span>
 </mat-toolbar>
 
 
