added header and list to paintings page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,10 +15,11 @@
       </div>
 </div>
 <div>
-    <button (click)="onPaintingsClick()">
+    <button mat-button (click)="onPaintingsClick()">
         test routing
     </button>
 </div>
+
 
 
 
