--- a/src/app/paintings/paintings.component.html
+++ b/src/app/paintings/paintings.component.html
@@ -1,3 +1,67 @@
-<p>
-  paintings works!
-</p>
+  <mat-card>
+    <img mat-card-image src="assets/bluepainting.png"> 
+  </mat-card>
+
+  <mat-card class="card-intro">
+      <mat-card-title>
+          <h1>De Music in Colour collectie</h1>
+      </mat-card-title>
+      <mat-card-content>
+        <h2>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </h2>
+      </mat-card-content>
+      <img mat-card-image src="assets/bluepainting.png"> 
+    </mat-card>
+
+    <mat-grid-list cols="2" rowHeight="2:1">
+        <mat-grid-tile>
+                <img src="assets/bluepainting.png"> 
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <div>
+              <p>Eerste schilderij</p>
+              <p>
+                dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+              </p>
+          </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <img src="assets/bluepainting.png"> 
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <div>
+                <p>Eerste schilderij</p>
+                <p>
+                  dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+                </p>
+            </div>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <img src="assets/bluepainting.png"> 
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <div>
+          <p>Eerste schilderij</p>
+          <p>
+            dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+          </p>
+      </div>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <img src="assets/bluepainting.png"> 
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <div>
+            <p>Eerste schilderij</p>
+            <p>
+              dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+            </p>
+        </div>
+    </mat-grid-tile>
+    
+      </mat-grid-list>
+      
+
+  
+ 
