made paintings page prettier

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
         <mat-icon>home</mat-icon>
     </button>
   </span>
-  <span>
+  <!-- <span>
     <p>
         Bob Hoogenboom
     </p>
-  </span>
+  </span> -->
 </mat-toolbar>
 
 
