--- a/src/app/paintings/paintings.component.css
+++ b/src/app/paintings/paintings.component.css
@@ -1,3 +1,9 @@
+.card-intro {
+    margin-top: -15 px;
+    margin: 0, -5, 0, 20 px;
+}
+
+
 .card-show-painting {
     background-color: white;
     max-width: 900px;
@@ -10,6 +16,13 @@
     display: flex;
     align-items: stretch;
     justify-content: space-around;
+}
+
+.paintingsTitle {
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 350%;
+    font-weight: bold;
 }
 
 
