--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,13 @@
 h1 {
-    color: red;
-    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 250%;
   }
   h2, h3 {
-    color: red;
-    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(83, 83, 83);
+    font-family: 'Segoe UI, Tahoma, Geneva, Verdana, sans-serif';
     font-weight: lighter;
+    font-size: 150%;
   }
   body {
     margin: 2em;
