--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,7 @@
       
             <mat-card>
                 <mat-card-title>{{universeNavCard.title}}</mat-card-title>
-                
-                <img mat-card-image class="mat-card-image-home" src="assets/bluepainting.png"> 
+                    <img mat-card-image class="mat-card-image-home" src="assets/cavia1.jpg" style="height:130px; object-fit: cover; "> 
             </mat-card>
           </div>
       </div>
