added gracitation page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,11 @@
 </div>
 <div>
     <button mat-button (click)="onPaintingsClick()">
-        test routing
+        schilderijen
+    </button>
+
+    <button mat-button (click)="onGravitationClick()">
+        gravitatietheorie
     </button>
 </div>
 
