--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,32 @@ h1 {
   }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.macy {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* .page-intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+.page-intro-title {
+  color: black;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 250%;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.page-intro-text {
+  width: 60%;
+  text-align: justify;
+  line-height: 25px;
+}
