--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,35 +1,31 @@
-div {
+
+.beau {
     display: flex;
-    justify-content: center;
-    align-items: baseline;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 40px;
 }
 
-.homepage-grid {
+.home-title {
+    font-weight: normal;
+    /* font-style: italic; */
+}
+
+.home-image {
+    margin-top: 20px;
+}
+
+.news {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    max-width: 1000px;
-    margin: 40px;
+    align-items: center;
+    width: 25%;
+    background-color: aliceblue;
+    border-radius: 20px;
 }
 
-.homepage-grid-row {
-    display: flex;
-    justify-content: center;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    max-height: 300px;
-}
-
-
-
-mat-card {
-    background-color: #FFFFFF;
-    max-width: 250px;
-    margin: 8px;
-    /* padding: 5px; */
-    border: 15px rgb(140, 171, 201);
-}
-
-.mat-card-image-home {
-    max-heigth: 140px;
+.news-title {
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 180%;
 }
