--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,29 +1,14 @@
-<div>
-    <div class="homepage-grid">
-        <div class="homepage-grid-row">
-            <mat-card>
-                <mat-card-title>{{paintingsNavCard.title}}</mat-card-title>
-                <img mat-card-image src="assets/bluepainting.png"> 
-            </mat-card>
-      
-            <mat-card>
-                <mat-card-title>{{universeNavCard.title}}</mat-card-title>
-                    <img mat-card-image class="mat-card-image-home" src="assets/cavia1.jpg" style="height:130px; object-fit: cover; "> 
-            </mat-card>
-          </div>
-      </div>
-</div>
-<div>
-    <button mat-button (click)="onPaintingsClick()">
-        schilderijen
-    </button>
-
-    <button mat-button (click)="onGravitationClick()">
-        gravitatietheorie
-    </button>
-</div>
-
-
-
-
-
+<div class="beau">
+    <div class="macy sixty">
+        <p class="home-title page-intro-title">Welkom op de website van Bob Hoogenboom!</p>
+        <p class="page-intro-text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <div>
+            <img class="home-image" src="assets/bluepainting.png">
+        </div>
+    </div>
+    <div class="news">
+        <p class="news-title">Nieuws</p>
+    </div>
+</div>    
