--- a/src/app/paintings/paintings.component.html
+++ b/src/app/paintings/paintings.component.html
@@ -1,65 +1,79 @@
 <div>
   <div class="macy">
       <p class="page-intro-title">De Music in Colour collectie</p>
-      <p class="page-intro-text">
+      <p class="page-intro-text paintings-page-intro">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
       </p>
   </div>
 
-  <mat-grid-list cols="2" rowHeight="2:1">
-        <mat-grid-tile>
-                <img src="assets/bluepainting.png"> 
-        </mat-grid-tile>
-        <mat-grid-tile>
-          <div>
-              <h1>Schilderij 01</h1>
-              <h2>
+  <div class="paintings-list">
+    <div class="painting-row">
+      <div class="painting">
+          <img class="painting-image" src="assets/bluepainting.png"> 
+      </div>
+      <div class="painting-text">
+        <p class="painting-text-title">Schilderij 1</p>
+        <p class="painting-text-content page-intro-text">
+            Dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+            Het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+        </p>
+        <button mat-button (click)="onReadMoreClick()">
+            BEKIJK SCHILDERIJ <mat-icon>arrow_forward_ios</mat-icon>
+        </button>
+
+      </div>
+    </div>
+
+        <div class="painting-row">
+          <div class="painting">
+              <img class="painting-image" src="assets/bluepainting.png"> 
+          </div>
+          <div class="painting-text">
+            <p class="painting-text-title">Schilderij 2</p>
+            <p class="painting-text-content page-intro-text">
                 Dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
                 Het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
-              </h2>
-            <!-- <h2>BEKIJKEN <span>
-              <mat-icon>arrow_forward_ios</mat-icon>
-            </span></h2> -->
-            <button mat-button (click)="onReadMoreClick()">
-              BEKIJK SCHILDERIJ <mat-icon>arrow_forward_ios</mat-icon>
-            </button>
-          </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <img src="assets/bluepainting.png"> 
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <div>
-                <p>Eerste schilderij</p>
-                <p>
-                  it is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
-                </p>
-            </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <img src="assets/bluepainting.png"> 
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <div>
-          <p>Eerste schilderij</p>
-          <p>
-            dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
-          </p>
-      </div>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <img src="assets/bluepainting.png"> 
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <div>
-            <p>Eerste schilderij</p>
-            <p>
-              dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
             </p>
+            <button mat-button (click)="onReadMoreClick()">
+                BEKIJK SCHILDERIJ <mat-icon>arrow_forward_ios</mat-icon>
+            </button>
+    
+          </div>
         </div>
-    </mat-grid-tile>
 
-      </mat-grid-list>
+            <div class="painting-row">
+              <div class="painting">
+                  <img class="painting-image" src="assets/bluepainting.png"> 
+              </div>
+              <div class="painting-text">
+                <p class="painting-text-title">Schilderij 3</p>
+                <p class="painting-text-content page-intro-text">
+                    Dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+                    Het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+                </p>
+                <button mat-button (click)="onReadMoreClick()">
+                    BEKIJK SCHILDERIJ <mat-icon>arrow_forward_ios</mat-icon>
+                </button>
+        
+              </div>
+            </div>
+
+                <div class="painting-row">
+                  <div class="painting">
+                      <img class="painting-image" src="assets/bluepainting.png"> 
+                  </div>
+                  <div class="painting-text">
+                    <p class="painting-text-title">Schilderij 4</p>
+                    <p class="painting-text-content page-intro-text">
+                        Dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+                        Het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
+                    </p>
+                    <button mat-button (click)="onReadMoreClick()">
+                        BEKIJK SCHILDERIJ <mat-icon>arrow_forward_ios</mat-icon>
+                    </button>
+            
+                  </div>
+                </div>
 </div>
 
 
