--- a/src/styles.css
+++ b/src/styles.css
@@ -30,12 +30,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   align-items: center;
 }
 
-/* .page-intro {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
-
 .page-intro-title {
   color: black;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -47,7 +41,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .page-intro-text {
-  width: 60%;
   text-align: justify;
   line-height: 25px;
+}
+
+.sixty {
+  width: 60%;
 }
