layout gravitation page now side by side

--- a/src/app/gravitation/gravitation.component.css
+++ b/src/app/gravitation/gravitation.component.css
@@ -1,6 +1,13 @@
-.book-preview {
-    margin: 20px;
+
+.book-preview-container {
+    width: 50%;
 }
+
+.book-preview {
+    margin: 10px;
+}
+
+
 
 .buy-button {
     width: 180px;
