--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,12 @@ h1 {
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.beau {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 40px;
+}
 
 .macy {
   display: flex;
