--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
       <button mat-button class="toolbar-button"  (click)="onHealthClick()">
           Gezondheid en sport
       </button>
+      <button mat-button class="toolbar-button"  (click)="onMotorClick()">
+          Motor
+      </button>
     </div>
 </mat-toolbar>
 
