--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,9 @@ h1 {
   }
   h2, h3 {
     color: rgb(83, 83, 83);
-    font-family: 'Segoe UI, Tahoma, Geneva, Verdana, sans-serif';
-    font-weight: lighter;
-    font-size: 150%;
+    font-family: Roboto;
+    font-weight: normal;
+    font-size: 180%;
   }
   body {
     margin: 2em;
@@ -28,6 +28,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   flex-direction: row;
   justify-content: space-around;
   margin-top: 40px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .macy {
@@ -46,6 +48,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   margin-right: 10px;
 }
 
+
+/* replace */
 .page-intro-text {
   text-align: justify;
   line-height: 25px;
@@ -53,4 +57,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .sixty {
   width: 60%;
+}
+
+text-beginning-of-page {
+  line-height: 25px;
 }
