gravitation page and fixed styles.css

--- a/src/app/gravitation/gravitation.component.html
+++ b/src/app/gravitation/gravitation.component.html
@@ -1,21 +1,29 @@
-
-
 <div class="beau">
-
-    <div class="book-preview-container">
-        <div class="book-preview">
-            <!-- <a href="https://www.amazon.com/New-Theory-Gravitation-Bob-Hoogenboom-ebook/dp/B07F8XCZWL">Koop via Amazon</a> -->
-            <iframe type="text/html" width="336" height="550" frameborder="0" allowfullscreen style="max-width:100%" src="https://read.amazon.com/kp/card?asin=B07F8XCZWL&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_wa2DDbSKSKQPS" ></iframe>
-          </div>
-    </div>
-
-  <div class="macy sixty">
-    <p class="page-intro-title">Een nieuwe theorie over het universum</p>
-    <p class="page-intro-text">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+  <div class="main-text">
+    <h2>Een nieuwe theorie over het universum</h2>
+    <p class="text-beginning-of-page">
+      Wij worden niet aangetrokken door de aarde, maar er naartoe geduwd. 
+    </p>
+    <p class="text-beginning-of-page">
+      In "een Nieuwe Gravitatietheorie" wordt zeer beknopt uiteengezet hoe ons universum mogelijk zou kunnen
+      zijn ontstaan en hoe het zou kunnen werken. De conclusies van deze theorie zijn drastisch anders dan het 
+      bestaande, breed geaccepteerde denkbeeld over het heelal. 
+    </p>
+    <p class="text-beginning-of-page">
+        Bekijk de preview hiernaast of bekijk via onderstaande link.
     </p>
     <div>
-        <a mat-raised-button class="buy-button" href="https://play.google.com/store/books/details/a_New_Theory_of_Gravitation?id=0KRfDwAAQBAJ&hl=en_GB" target="_blank">Koop bij google books</a>
+        <a mat-raised-button class="buy-button" 
+        href="https://play.google.com/store/books/details/a_New_Theory_of_Gravitation?id=0KRfDwAAQBAJ&hl=en_GB" 
+        target="_blank">Lees via Google books</a>
     </div>
-</div>
+
+  </div>
+
+  <div class="macy book-preview-container">
+      <div class="book-preview">
+        <iframe type="text/html" width="336" height="550" frameborder="0" allowfullscreen style="max-width:100%" src="https://read.amazon.com/kp/card?asin=B07F8XCZWL&preview=inline&linkCode=kpe&ref_=cm_sw_r_kb_dp_wa2DDbSKSKQPS" ></iframe>
+      </div>
+  </div>
+
 </div>
