--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   width: 60%;
 }
 
-text-beginning-of-page {
+.text-beginning-of-page {
   line-height: 25px;
+  text-align: justify;
 }
