--- a/src/app/gravitation/gravitation.component.css
+++ b/src/app/gravitation/gravitation.component.css
@@ -1,3 +1,7 @@
+.main-text {
+    width: 50%;
+}
+
 
 .book-preview-container {
     width: 50%;
@@ -10,6 +14,7 @@
 
 
 .buy-button {
+    margin: 20px;;
     width: 180px;
-    background-color: yellow;
+    background-color: lightskyblue;
 }
