--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,9 @@
       <button mat-button class="toolbar-button"  (click)="onMotorClick()">
           Motor
       </button>
+      <button mat-button class="toolbar-button"  (click)="onContactClick()">
+          Contact
+      </button>
     </div>
 </mat-toolbar>
 
