--- a/src/app/paintings/paintings.component.html
+++ b/src/app/paintings/paintings.component.html
@@ -17,7 +17,7 @@
             Dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
             Het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
         </p>
-        <button mat-button (click)="onReadMoreClick()">
+        <button mat-button>
             BEKIJK SCHILDERIJ <mat-icon>arrow_forward_ios</mat-icon>
         </button>
 
@@ -34,7 +34,7 @@
                 Dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
                 Het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
             </p>
-            <button mat-button (click)="onReadMoreClick()">
+            <button mat-button>
                 BEKIJK SCHILDERIJ <mat-icon>arrow_forward_ios</mat-icon>
             </button>
     
@@ -51,7 +51,7 @@
                     Dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
                     Het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
                 </p>
-                <button mat-button (click)="onReadMoreClick()">
+                <button mat-button>
                     BEKIJK SCHILDERIJ <mat-icon>arrow_forward_ios</mat-icon>
                 </button>
         
@@ -68,7 +68,7 @@
                         Dit is het eerste schilderij uit de lijst en het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
                         Het is een mooi schilderij. De andere schilderijen zijn ook mooi en hebben misschien andere kleuren.
                     </p>
-                    <button mat-button (click)="onReadMoreClick()">
+                    <button mat-button>
                         BEKIJK SCHILDERIJ <mat-icon>arrow_forward_ios</mat-icon>
                     </button>
             
