contact page: added photo, in progress

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,7 +11,9 @@
   <div class="macy about-text">
     <h2>Over Bob</h2>
   </div>
-  
+  <div class="macy image-bob">
+    <img style="object-fit: contain; width: 60%;" src="assets/foto_bob.jpg">
+  </div>
 
 
 </div>
