contact page completed

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,7 +1,11 @@
 .contact-info-text {
-    width: 20%;
+    width: 30%;
 }
 
 .about-text {
     width: 30%;
+}
+
+.image-bob {
+    width: 30%;;
 }
