--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,13 @@
 <div class="beau">
+      <div class="macy about-text">
+        <div>
+          <h2>Over Bob</h2>
+          <p class="text-beginning-of-page">
+            Bob Hoogenboom is kunstschilder, uitvinder en zeer begaan met gezondheid en sport.
+            Als grondlegger van HB Healthy Body Products b.v. produceert en verkoopt hij kwaliteitsvoedingssupplementen.
+          </p>
+        </div>
+      </div>
   <div class="macy contact-info-text">
     <div>
       <h2>Contact</h2>
@@ -8,11 +17,8 @@
       <p>Bekijk op <a href="https://www.facebook.com/bob.hoogenboom.503">Facebook</a>  </p>
     </div>
   </div>
-  <div class="macy about-text">
-    <h2>Over Bob</h2>
-  </div>
   <div class="macy image-bob">
-    <img style="object-fit: contain; width: 60%;" src="assets/foto_bob.jpg">
+    <img style="object-fit: contain; width: 90%;" src="assets/foto_bob.jpg">
   </div>
 
 
