improved layout contact page, commented out health page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,10 @@
       <button mat-button class="toolbar-button"  (click)="onGravitationClick()">
           Gravitatietheorie
       </button>
-      <button mat-button class="toolbar-button"  (click)="onHealthClick()">
+      <!-- Page not yet implemented -->
+      <!-- <button mat-button class="toolbar-button"  (click)="onHealthClick()">
           Gezondheid en sport
-      </button>
+      </button> -->
       <button mat-button class="toolbar-button"  (click)="onMotorClick()">
           Motor
       </button>
