paintings page: in progress

--- a/src/app/gravitation/gravitation.component.html
+++ b/src/app/gravitation/gravitation.component.html
@@ -6,8 +6,8 @@
     </p>
     <p class="text-beginning-of-page">
       In "een Nieuwe Gravitatietheorie" wordt zeer beknopt uiteengezet hoe ons universum mogelijk zou kunnen
-      zijn ontstaan en hoe het zou kunnen werken. De conclusies van deze theorie zijn drastisch anders dan het 
-      bestaande, breed geaccepteerde denkbeeld over het heelal. 
+      zijn ontstaan en hoe het zou kunnen werken. De conclusies van deze theorie zijn drastisch anders dan de 
+      bestaande, breed geaccepteerde denkbeelden over het heelal. 
     </p>
     <p class="text-beginning-of-page">
         Bekijk de preview hiernaast of bekijk via onderstaande link.
