--- a/src/app/paintings/paintings.component.html
+++ b/src/app/paintings/paintings.component.html
@@ -1,3 +1,33 @@
+<div class="beau">
+  <div class="macy main-text">
+    <div>
+      <h2>Kunst die je eindeloos meeneemt</h2>        
+      <p class="text-beginning-of-page">
+        De Music in Colour collectie bestaat uit composities die een eindeloze 
+        variatie aan interpretaties toelaten. Hoe langer je kijkt, hoe meer diepte,
+        detail en verhaal je ziet. 
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="beau">
+    <div class="macy main-text">
+      <div>
+        <h2>In het licht van Rembrandt</h2>        
+        <p class="text-beginning-of-page">
+          De Music in Colour collectie bestaat uit composities die een eindeloze 
+          variatie aan interpretaties toelaten. Hoe langer je kijkt, hoe meer diepte,
+          detail en verhaal je ziet. 
+        </p>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
 <div>
   <div class="macy">
       <p class="page-intro-title">De Music in Colour collectie</p>
