paintings page: added intro text and layout

--- a/src/app/paintings/paintings.component.html
+++ b/src/app/paintings/paintings.component.html
@@ -9,6 +9,10 @@
       </p>
     </div>
   </div>
+
+  <div class="macy painting-image-container">
+    <img style="object-fit: contain; width: 90%;" src="assets/bluepainting.png">
+  </div>
 </div>
 
 <div class="beau">
@@ -21,6 +25,10 @@
           detail en verhaal je ziet. 
         </p>
       </div>
+    </div>
+
+    <div class="macy painting-image-container">
+      <img style="object-fit: contain; width: 90%;" src="assets/climate_change2.png">
     </div>
   </div>
 
