--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   margin-top: 40px;
   margin-left: 50px;
   margin-right: 50px;
+  margin-bottom: 80px;
 }
 
 .macy {
