added 3 paintings on a new collection page

--- a/src/app/paintings/paintings.component.html
+++ b/src/app/paintings/paintings.component.html
@@ -3,34 +3,35 @@
     <div>
       <h2>Kunst die je eindeloos meeneemt</h2>        
       <p class="text-beginning-of-page">
-        De Music in Colour collectie bestaat uit composities die een eindeloze 
+        De <i>Music in Colour</i> collectie bestaat uit composities die een eindeloze 
         variatie aan interpretaties toelaten. Hoe langer je kijkt, hoe meer diepte,
         detail en verhaal je ziet. 
       </p>
+      <button mat-button (click)="onViewCollectionClick()" >
+        BEKIJK COLLECTIE <mat-icon>arrow_forward_ios</mat-icon>
+      </button>
     </div>
   </div>
-
   <div class="macy painting-image-container">
     <img style="object-fit: contain; width: 90%;" src="assets/bluepainting.png">
   </div>
 </div>
 
 <div class="beau">
-    <div class="macy main-text">
-      <div>
-        <h2>In het licht van Rembrandt</h2>        
-        <p class="text-beginning-of-page">
-          De Music in Colour collectie bestaat uit composities die een eindeloze 
-          variatie aan interpretaties toelaten. Hoe langer je kijkt, hoe meer diepte,
-          detail en verhaal je ziet. 
-        </p>
-      </div>
-    </div>
-
-    <div class="macy painting-image-container">
-      <img style="object-fit: contain; width: 90%;" src="assets/climate_change2.png">
+  <div class="macy main-text">
+    <div>
+      <h2>De boom</h2>        
+      <p class="text-beginning-of-page">
+        De boom in het werk <i>Climate Change</i> is als laatste in het schilderij geplaatst,
+        in een verder abstracte wereld.
+      </p>
     </div>
   </div>
+  <div class="macy painting-image-container">
+    <img style="object-fit: contain; width: 90%;" src="assets/climate_change2.png">
+  </div>
+</div>
+
 
 
 
@@ -38,7 +39,7 @@
 
 <div>
   <div class="macy">
-      <p class="page-intro-title">De Music in Colour collectie</p>
+      <h2>De Music in Colour collectie</h2>
       <p class="page-intro-text paintings-page-intro">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
       </p>
