start with home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,27 @@
 <div class="beau">
+    <div class="subject-card">
+        <mat-card>
+            Gravitatietheorie
+        </mat-card>
+    </div>
+    <div class="subject-card">
+            <mat-card>
+                Gravitatietheorie
+            </mat-card>
+    </div>
+    <div class="subject-card">
+            <mat-card>
+                Gravitatietheorie
+            </mat-card>
+    </div>
+   
+</div>
+
+
+
+<!-- 
+
+<div class="beau">
     <div class="macy sixty">
         <p class="home-title page-intro-title">Welkom op de website van Bob Hoogenboom!</p>
         <p class="page-intro-text">
@@ -11,4 +34,4 @@
     <div class="news">
         <p class="news-title">Nieuws</p>
     </div>
-</div>    
+</div>     -->
