--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -22,3 +22,7 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 180%;
 }
+
+.subject-card {
+    width: 900px;
+}
