--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -24,5 +24,21 @@
 }
 
 .subject-card {
-    width: 900px;
+    width: 450px;
+}
+
+.square-image-container {
+    width: 180px;
+    height: 180px;
+}
+
+.gravitation-image-container {
+    width: 180px;
+    height: 180px;
+}
+
+button {
+    border-color: white;
+    background-color: white;
+    border-width: 0;
 }
