--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,21 @@
 <div class="beau">
-    <div class="subject-card">
-        <mat-card>
-            Gravitatietheorie
-        </mat-card>
-    </div>
+    <button>
+            <div class="subject-card">
+                    <mat-card>
+                        <div class="gravitation-image-container">
+                            <img style="object-fit: cover; height: 100%;" src="assets/coverHeelal.png">
+                        </div>
+                    </mat-card>
+                </div>
+    </button>
+    
     <div class="subject-card">
             <mat-card>
-                Gravitatietheorie
+                <div class="square-image-container">
+                     <img style="object-fit: cover; width: 100%;" src="assets/brws-B1.jpg">
+                </div>
             </mat-card>
     </div>
-    <div class="subject-card">
-            <mat-card>
-                Gravitatietheorie
-            </mat-card>
-    </div>
-   
 </div>
 
 
