home page: styled the cards with subjects

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,26 +1,60 @@
-<div class="beau">
+<div class="beau extra-margin">
     <button>
-            <div class="subject-card">
-                    <mat-card>
-                        <div class="gravitation-image-container">
-                            <img style="object-fit: cover; height: 100%;" src="assets/coverHeelal.png">
+        <div>
+            <mat-card class="subject-card">
+                    <div class="subject-text-container">
+                            
                         </div>
-                    </mat-card>
-                </div>
+            </mat-card>
+        </div>
     </button>
-    
-    <div class="subject-card">
-            <mat-card>
+
+    <button>
+        <div>
+            <mat-card class="subject-card">
                 <div class="square-image-container">
-                     <img style="object-fit: cover; width: 100%;" src="assets/brws-B1.jpg">
+                    <img style="object-fit: cover; width: 100%;" src="assets/motor3.jpg">
+                </div>
+                <div class="subject-text-container">
+                    <div class="home-title">Motor</div>
+                    <div>De Hoogenboom Motor</div>
                 </div>
             </mat-card>
-    </div>
+        </div>
+    </button>
+</div>
+
+<div class="beau extra-margin">
+        <button>
+            <div>
+                <mat-card class="subject-card">
+                    <div class="gravitation-image-container">
+                        <img style="object-fit: cover; height: 100%;" src="assets/coverHeelal.png">
+                    </div>
+                    <div class="subject-text-container">
+                            <div class="home-title">Gracitatie</div>
+                    </div>
+                </mat-card>
+            </div>
+        </button>
+
+    <button>
+        <div>
+            <mat-card class="subject-card">
+                <div class="square-image-container">
+                    <img style="object-fit: cover; width: 100%;" src="assets/brws-B1.jpg">
+                </div>
+                <div class="subject-text-container">
+                        <div class="home-title">Schilderijen</div>
+                </div>
+            </mat-card>
+        </div>
+    </button>
 </div>
 
 
 
-<!-- 
+<!--
 
 <div class="beau">
     <div class="macy sixty">
