--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,30 +1,35 @@
 
 .home-title {
-    font-weight: normal;
-    font-size: 180%;
+    font-size: 250%;
 }
 
-.home-image {
-    margin-top: 20px;
-}
 
-.news {
+.title-card {
+    width: 450px;
+    height: 190px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 25%;
-    background-color: aliceblue;
-    border-radius: 20px;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
-.news-title {
-    color: black;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 180%;
-}
 
 .subject-card {
     width: 450px;
+    height: 190px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.subject-text-container {
+    width: 200px;
+    margin-left: 20px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .square-image-container {
@@ -41,4 +46,9 @@ button {
     border-color: white;
     background-color: white;
     border-width: 0;
+}
+
+.extra-margin {
+    margin-left: 210px;
+    margin-right: 210px;
 }
