home page: fixed styling of subject cards

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="beau extra-margin">
     <button>
         <div>
-            <mat-card class="subject-card">
+            <mat-card class="subject-card mat-elevation-z8">
                     <div class="subject-text-container">
                             
                         </div>
@@ -11,13 +11,13 @@
 
     <button>
         <div>
-            <mat-card class="subject-card">
+            <mat-card class="subject-card mat-elevation-z8">
                 <div class="square-image-container">
                     <img style="object-fit: cover; width: 100%;" src="assets/motor3.jpg">
                 </div>
                 <div class="subject-text-container">
-                    <div class="home-title">Motor</div>
-                    <div>De Hoogenboom Motor</div>
+                    <div class="home-title">Hoogenboom</div>
+                    <div class="home-title">engine</div>
                 </div>
             </mat-card>
         </div>
@@ -27,25 +27,26 @@
 <div class="beau extra-margin">
         <button>
             <div>
-                <mat-card class="subject-card">
-                    <div class="gravitation-image-container">
-                        <img style="object-fit: cover; height: 100%;" src="assets/coverHeelal.png">
+                <mat-card class="subject-card mat-elevation-z8">
+                    <div class="square-image-container">
+                        <img style="object-fit: cover; height: 100%;" src="assets/coverHeelal2.png">
                     </div>
                     <div class="subject-text-container">
-                            <div class="home-title">Gracitatie</div>
-                    </div>
+                            <div class="home-title">een Nieuwe</div>
+                            <div class="home-title">Gravitatietheorie</div>
+                        </div>
                 </mat-card>
             </div>
         </button>
 
     <button>
         <div>
-            <mat-card class="subject-card">
+            <mat-card class="subject-card mat-elevation-z8">
                 <div class="square-image-container">
                     <img style="object-fit: cover; width: 100%;" src="assets/brws-B1.jpg">
                 </div>
                 <div class="subject-text-container">
-                        <div class="home-title">Schilderijen</div>
+                        <div class="home-title">Schilderkunst</div>
                 </div>
             </mat-card>
         </div>
