--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,9 @@
                 <div class="subject-text-container">
                     <div class="home-title">Hoogenboom</div>
                     <div class="home-title">engine</div>
+                    <p class="read-more">
+                        LEES MEER <mat-icon style="color: gray; font-size: 80%;">arrow_forward_ios</mat-icon>
+                    </p>
                 </div>
             </mat-card>
         </div>
@@ -34,6 +37,9 @@
                     <div class="subject-text-container">
                             <div class="home-title">een Nieuwe</div>
                             <div class="home-title">Gravitatietheorie</div>
+                            <p class="read-more">
+                                LEES MEER <mat-icon style="color: gray; font-size: 80%;">arrow_forward_ios</mat-icon>
+                            </p>
                         </div>
                 </mat-card>
             </div>
@@ -47,6 +53,10 @@
                 </div>
                 <div class="subject-text-container">
                         <div class="home-title">Schilderkunst</div>
+                        <div class="home-title" style="color: white;">Schilderkunst</div>
+                        <p class="read-more">
+                            BEKIJK <mat-icon style="color: gray; font-size: 80%;">arrow_forward_ios</mat-icon>
+                        </p>
                 </div>
             </mat-card>
         </div>
