home page welcome card

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,11 @@
 <div class="beau extra-margin">
     <button>
         <div>
-            <mat-card class="subject-card mat-elevation-z8">
-                    <div class="subject-text-container">
-                            
-                        </div>
+            <mat-card class="title-card mat-elevation-z8">
+                        <div class="home-welcome">Welkom!</div>
+                        <div class="home-intro">Kies een onderwerp om verder te kijken.</div>
+                        <div class="home-intro">Veel plezier!</div>
+
             </mat-card>
         </div>
     </button>
