--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,13 @@
+.home-welcome {
+    font-size: 450%;
+}
+
+.home-intro {
+font-size: 200%;
+color: gray;
+margin-top: 15px;
+}
+
 
 .home-title {
     font-size: 300%;
@@ -6,7 +16,7 @@
 
 
 .title-card {
-    width: 450px;
+    width: 500px;
     height: 190px;
     display: flex;
     flex-direction: column;
@@ -33,6 +43,15 @@
     align-items: flex-start;
 }
 
+.welcome-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 490px;
+    height: 190px;
+}
+
 .square-image-container {
     width: 180px;
     height: 180px;
@@ -50,6 +69,7 @@ button {
 }
 
 .extra-margin {
+    margin-top: 100px;;
     margin-left: 210px;
     margin-right: 210px;
 }
