--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,16 @@
 <div class="beau extra-margin">
-    <button>
-        <div>
-            <mat-card class="title-card mat-elevation-z8">
-                        <div class="home-welcome">Welkom!</div>
-                        <div class="home-intro">Kies een onderwerp om verder te kijken.</div>
-                        <div class="home-intro">Veel plezier!</div>
 
-            </mat-card>
-        </div>
-    </button>
+    <div class="main-text">
+        <h2>Welkom op de website van Bob Hoogenboom!</h2>
+        <p class="text-beginning-of-page">
+         Kijk gerust even rond voor inspiratie. Meer onderwerpen zoals gezondheid, Formule 1 en het klimaatprobleem 
+         volgen binnenkort.
+        </p> 
+    </div>
 
+
+<div class="macy">
+   
     <button>
         <div>
             <mat-card class="subject-card mat-elevation-z8">
@@ -26,9 +27,7 @@
             </mat-card>
         </div>
     </button>
-</div>
 
-<div class="beau extra-margin">
         <button>
             <div>
                 <mat-card class="subject-card mat-elevation-z8">
@@ -63,22 +62,5 @@
         </div>
     </button>
 </div>
+</div>
 
-
-
-<!--
-
-<div class="beau">
-    <div class="macy sixty">
-        <p class="home-title page-intro-title">Welkom op de website van Bob Hoogenboom!</p>
-        <p class="page-intro-text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
-        <div>
-            <img class="home-image" src="assets/bluepainting.png">
-        </div>
-    </div>
-    <div class="news">
-        <p class="news-title">Nieuws</p>
-    </div>
-</div>     -->
